--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -58,13 +58,13 @@ header p {
 }
 
 h2 {
-    font-size: 1.8em; 
+    font-size: 1.8rem; 
     color: #000000; 
     margin-bottom: 10px; 
 }
 
 p {
-    font-size: 1em; 
+    font-size: 1rem; 
     color: #000000; 
     margin-bottom: 15px; 
 }
