styled the anchor tag to make it look like a button

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -36,6 +36,10 @@ img-container img {
 
 a {
     text-decoration: none;
+    padding:6px;
+    background-color: azure;
+    border: 2px solid black;
+   
 }
 
 .flex-container img, .flex-container h2,.flex-container p {
