changed the head tag to header tag and styled the header elements

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -11,6 +11,10 @@ body {
     text-align: center;
 }
 
+header h1, header p {
+    margin: 10px;
+}
+
 .container {
     width: 500px;
     margin: 0 auto;
