--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -52,6 +52,18 @@ input, select {
 
 }
 
+button {
+  padding: 0.5rem;
+  margin-top: 1rem;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  font-size: 1.3rem;
+  width: 100%;
+  background-color: green;
+  color: #ffee
+}
+
 label {
   font-size: 1.35rem;
   width: 100%;
