--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -39,12 +39,12 @@ main {
 }
 
 .form {
-    padding: 30px 40px;
+    padding: 2rem;
 }
 
 .form-control {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
+    margin-bottom: 0.625rem;
+    padding-bottom: 1.25rem;
     position: relative;
 }
 
@@ -158,7 +158,6 @@ select:hover {
 .form-delivery input {
     margin-top: 1rem;
     background-color: rgba(8, 249, 217, 0.357);
-    color: rgb(24, 11, 64);
     font-size: larger;
 }
 
