--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -33,13 +33,14 @@ main {
 .container {
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 2px 10px;
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.1);
     width: 580px;
     margin: auto;
 }
 
 .form {
     padding: 2rem;
+    margin-bottom: 5rem;
 }
 
 .form-control {
@@ -51,7 +52,7 @@ main {
 .form-control label {
     color: #777;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0.5em;
 }
 
 .form-control input {
@@ -59,7 +60,7 @@ main {
     border-radius: 4px;
     display: block;
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     font-size: 14px;
 }
 
@@ -81,15 +82,17 @@ input:valid:focus {
 
 /* ------------------- radio button size ----------------------- */
 
+
 .form-size,
 .dropdown {
     border: 2px solid #f0f0f0;
-    border-radius: 9px;
+    border-radius: 4px;
     display: block;
     width: 100%;
     padding: 15px;
     font-size: 14px;
-
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 legend {
@@ -100,7 +103,6 @@ legend {
 
 input[type="radio"] {
     transform: scale(1.5);
-    margin-right: 0.5rem;
 }
 
 #red {
@@ -153,6 +155,7 @@ select:hover {
     width: 100%;
     padding: 10px;
     font-size: 14px;
+    margin-bottom: 3rem;
 }
 
 .form-delivery input {
