Pattern added, "action" changed, "min" of date added, submited button changed

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Bitter", serif;
   }
   
-  input[type=text], select {
+  input[type=text], input[type=email], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
