--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -61,7 +61,7 @@ select {
 
 button[type="submit"] {
     width: 100%;
-    background-color: #007BFF;
+    background-color: #0000FF;
     color: white;
     padding: 10px;
     font-size: 1rem;
@@ -71,11 +71,11 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #4343fb;
 }
 
 input:focus, select:focus, button:focus {
-    outline: 2px solid #007BFF;
+    outline: 2px solid #4646f5;
 }
 
 footer {
