I update the wireframe page according to the reviews

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -8,84 +8,84 @@ body {
   height: 100vh;
 }
 
+header {
+  margin: 1rem auto 0;
+  width: 60%;
+  margin-top: 2rem;
+}
+
+h3 {
+  margin-top: 1rem;
+  font-weight: 600;
+}
+
 main {
   width: 80%;
   margin: 1rem auto;
   height: 100vh;
 }
-section {
-  width: 100%;
+#content {
   margin: 0 auto;
-}
-header {
-  padding: 1rem 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5)
-}
-
-nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  padding: 1rem;
+  flex-direction: column;
+  gap: 2rem;  padding: 2rem;
 }
 
-nav h2 {
-  color: #6655bf;
-}
+#content article:first-child{
+  width: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 
-nav #nav-link{
-  display: flex;
-  justify-content: space-around;
-  gap: 1.5rem;
-  font-size: 1.3rem;
-}
-
-#nav-link a {
-  text-decoration: none;
-  color: #6655bf;
-}
-
-details#git-definition:first-child {
-  margin-bottom: 1rem;
-}
-
-.more-about {
-  font-size: 1.2rem;
-  margin: 0.5rem;
 }
 
 article {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  margin: 0.4rem;
-  padding: 0.5rem;
+  padding: 0.7rem;
+}
+
+#summary-section{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.2rem;
+  margin-bottom: 3rem;
+}
+
+article div {
+  flex: 1;
   border-radius: 5px;
 }
 
+img {
+  object-fit: cover;
+  width: 100%;
+}
+
+header {
+  padding: 1rem 0;
+}
+
+
+/* article {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  margin: 0.4rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+} */
+
 summary {
-  text-align: center;
   color: #6655bf;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin: 1rem;
 }
 
-#other-parts {
-  display: flex;
-  gap: 1rem;
-}
-#git-definition, #developers, #branches{
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem;
-  gap: 1rem;
-}
-
-#git-definition button, #developers button, #branches button{
+button{
   border: none;
   outline: none;
   background: #f723a5;
   padding: 0.5rem;
   width: 30%;
-  margin: 0 auto;
+  margin: 0.5rem auto;
   border-radius: 5px;
 }
 button a {
@@ -93,11 +93,12 @@ button a {
   color: black;
   font-size: 1rem;
 }
-details p {
-  line-height: 2rem;
+p {
+  line-height: 1.8rem;
+  font-size: 1.1rem;
 }
 
-details h2 {
+h2 {
   color: #6655bf;
   font-weight: normal;
 }
