--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -49,7 +49,11 @@ input, select {
   margin-bottom: 1rem;
   border-radius: 2px;
   box-shadow: 0 0 13px rgba(35, 31, 36, 0.5);
+  transition: border 0.2s;
+}
 
+input:focus, select:focus {
+  border: 3px dotted rgba(160, 48, 240, 0.933);
 }
 
 button {
