--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: slategray;
+    background-color: darkslategray;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
