chnaged the wording for the attribute tag and removed the colon. Html section background colour has been changed from aqua to f5e8e9 and first picture class has colour chnaged from darkblue to whitesmoke. .col colour changed from red to whitesmoke and border changed from 2px to 5px

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -23,7 +23,7 @@ img {
 section {
     width: 70%;
     margin: 0 auto;
-    background: aqua;
+    background: f5e8e9;
 }
 a{
     color: white;
@@ -34,7 +34,7 @@ footer {
 }
 .first-photo {
     width: 100%;
-    border: 2px solid darkblue;
+    border: 5px solid whitesmoke;
 }
 .section-two{
     display: flex;
@@ -44,7 +44,7 @@ footer {
 .col {
     width: 48%;
     margin: 0 auto;
-    border: 2px solid red;
+    border: 5px solid whitesmoke;
 }
 .col-content {
     padding: 10px;
