added styling to make the footer stay at the bottom.

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -31,6 +31,12 @@ a{
 }
 footer {
     text-align: center;
+    clear: both;
+    position: fixed;
+    bottom: 0;
+    height: 7%;
+    background-color: darkslategray;
+    width: 100%;
 }
 .first-photo {
     width: 100%;
