--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -6,7 +6,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-   
+   height: 1000px;
   }
 
 header{
@@ -16,10 +16,19 @@ header{
     background-color: #f4f4f4;
 }
 
+.bannerImg{
+    width: 100%;
+  height: 350px; 
+  background-image: url('../git_img.jpg');
+  background-size: cover;
+  background-position: center;
+    
+}
+
 
 
 .main-article>article:first-child{
-    margin:70px 70px;
+    margin:45px 70px;
     padding: 20px 30px;
     border-bottom: 1px solid grey;
 }
@@ -41,7 +50,7 @@ footer{
     font-weight: bold;
     background-color: #f4f4f4;
     
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
