--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -22,6 +22,10 @@ select {
     font-size: inherit;
 }
 
+fieldset {
+    border: none;
+}
+
 /* #endregion Reset styles */
 
 /* #region General styles */
@@ -133,10 +137,24 @@ button {
     background-color: #00414f;
 }
 
+legend {
+    color: #3b3939;
+    font-size: 1.17rem;
+    font-weight: 600;
+    position: relative;
+    top: 9px;
+    margin-bottom: 5px;
+}
+
+.form_color-fieldset legend {
+    margin-bottom: 25px;
+}
+
 .form_symbol-required {
     color: #3b3939;
 }
-.hint-text{
+
+.hint-text {
     color: #757575;
     margin: 10px 0 5px;
 }
@@ -180,7 +198,7 @@ select,
 .label-blue,
 .label-green {
     display: inline-block;
-    width: 92%;
+    width: 95%;
     padding: 10px;
     margin-left: 10px;
     text-align: center;
