Change aria-label text in footer

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -6,8 +6,6 @@
 }
 
 button {
-    padding: 0;
-    font-family: inherit;
     background: none;
     border: none;
 }
@@ -86,16 +84,12 @@ input[type="radio"] {
 
 input:focus,
 select:focus {
-    border: 1.5px solid #03718a;
+    border: 2px solid #03718a;
     outline: none;
 }
 
 h1 {
     text-align: center;
-}
-
-h1,
-h2 {
     color: #fff;
 }
 
@@ -104,6 +98,7 @@ h2 {
     width: 70%;
     text-align: center;
     color: #cccccc;
+    margin-bottom: 20px;
 }
 
 button {
