--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,80 +1,147 @@
-/* Reset some styles for cleaner layout */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: aquamarine;
-    font-family: Arial, sans-serif;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  
-  header {
-    text-align: center;
-    background-color: #5585b5; ;
-    color: white;
-    padding: 20px;
-  }
-  
-  
+
+body {
+  background-color: aquamarine;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+header {
+  text-align: center;
+  background-color: #5585b5;
+  color: white;
+  padding: 10px;
+}
+
+main.articles {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  gap: 40px;
+  padding: 10px;
+  padding-bottom: 60px; 
+}
+
+@media (min-width: 768px) {
   main.articles {
-    flex: 1;
-    display: grid;
-    grid-template-columns: 1fr; 
-    grid-template-rows: auto; 
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas: 
+      "large large"
+      "small1 small2";
   }
-  
-  @media(min-width: 768px) {
-    main.articles {
-      grid-template-columns: 1fr 1fr; 
-      grid-template-rows: auto 1fr; 
-    }
+}
+
+  article:nth-child(1) {
+    grid-area: large;
   }
-  
-  article {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    text-align: left;
+
+  article:nth-child(2) {
+    grid-area: small1;
   }
-  
-  
-  article:first-child {
-    grid-column: 1 / span 2; 
-    background-color:  #53a8b6;
-    text-align: center;
-  }
-  article:not(:first-child) {
-      background-color: #79c2d0; 
-  
-  }
-  footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
-  
-  
-  a {
-    color: #0055ff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
+
+  article:nth-child(3) {
+    grid-area: small2;
+}
+
+article {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+}
+
+article:first-child {
+  background-color: #53a8b6;
+}
+
+article:not(:first-child) {
+  background-color: #79c2d0;
+}
+
+.text-content {
+  align-self: flex-start;
+  text-align: left;
+  margin-right: auto;
+  padding-right: 70px;
+}
+
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  margin: 0px 10px 0px 10px;
+  position: fixed;
+  bottom: 0;
+  width: 98%;
+}
+
+
+a {
+  color: #0055ff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+article img {
+  display: block;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.articles article:nth-child(1) img {
+  height: 350px;
+  width: 100%;
+}
+
+.articles article:nth-child(2) img,
+.articles article:nth-child(3) img {
+  height: 200px;
+  width: 100%;
+}
+.articles article:nth-child(1) .text-content {
+
+  align-self: flex-start;
+  text-align:left;
+  width: 20%;
+  margin-right: auto;
+  padding-right: 80px;
+}
+.articles article:nth-child(2) .text-content,
+.articles article:nth-child(3) .text-content {
+
+  align-self: flex-start;
+  text-align:left;
+  width: 30%;
+
+  margin-right: auto;
+  padding-right: 80px;
+}
+.read-more-button {
+  display: inline-block;
+  padding: 8px 15px;
+  background-color:white; 
+  color: black; 
+  text-align: center;
+  text-decoration: none; 
+  border-radius: 7px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 10px; 
+}
+
+.read-more-button:hover {
+  background-color: #003399; 
+}
